--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,17 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t aws-bootcamp:latest .
+      - name: 'Configure AWS credentials'
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::295786672535:role/okumura-camp20250710-role
+          aws-region: 'ap-northeast-1'
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Push Docker image to ECR
+        run: |
+          docker tag aws-bootcamp-cicd:latest 295786672535.dkr.ecr.ap-northeast-1.amazonaws.com/okumura-camp202507-repo-tasima-p:latest
+          docker push 295786672535.dkr.ecr.ap-northeast-1.amazonaws.com/okumura-camp202507-repo-tasima-p:latest
   deploy:
     name: "Deploy to AWS ECS"
     runs-on: ubuntu-latest
